js dom iniciante

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <label for="numero">digite um numero</label>
     <input type="text">
 
-    <button type=""></button>
+    <button id="button">fazer Tabuada</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
