--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="Titulo">Tabuada</h1>
-    <label for="numero">digite um numero</label>
-    <input type="text">
+    <h1 class="titulo">Tabuada</h1>
+    <label for="numero">Digite um número:</label>
+    <input type="text" id="numero" />
 
-    <button id="button">fazer Tabuada</button>
+    <button id="botao">enviar numero</button>
+    <div id="resultado"></div>
 
-    <script src="script.js"></script>
+    <script>
+      let input = document.getElementById("numero");
+      const botao = document.getElementById("botao");
+      const resultado = document.getElementById("resultado")
+
+
+      botao.addEventListener("click", () => {
+        const valor = parseInt(input.value);
+        for (let i = 1; i <= 10; i++) {
+          const linha = document.createElement('li');
+          linha.textContent = `${valor} x ${i} = ${valor * i}`;
+          resultado.appendChild(linha);
+        }
+      });
+
+      
+
+     
+    </script>
 </body>
 </html>
